try to re-use open views to avoid massive windows spawning

BUG: 474775

even without the project plugin you could trigger that in KWrite