apps/lib/kateviewmanager.cpp
@@ -444,8 +444,9 @@ KTextEditor::Document *KateViewManager::openUrls(const QList<QUrl> &urls, const 
     bool first = true;
     KTextEditor::Document *lastDocInThisViewManager = nullptr;
     for (auto doc : docs) {
-        // it we have a doc to close, we can use this window for the first document even in SDI mode
-        if (!m_sdiMode || (first && docToClose) || m_views.empty()) {
+        // it we have a document to close, we can use this window for the first document even in SDI mode
+        // try to re-use open views to avoid massive windows spawning, see bug 474775
+        if (!m_sdiMode || (first && docToClose) || m_views.empty() || activeViewSpace()->hasDocument(doc)) {
             // forward to currently active view space
             activeViewSpace()->registerDocument(doc);
             connect(doc, &KTextEditor::Document::documentSavedOrUploaded, this, &KateViewManager::documentSavedOrUploaded);
